# tidio-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py  tidio_client.py
.github/workflows/: ci.yml  release.yml
tests/: test_server.py  test_tidio_client.py
